--- a/weeks/week_08/lab_08/styles.css
+++ b/weeks/week_08/lab_08/styles.css
@@ -9,6 +9,11 @@ body {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
@@ -24,6 +29,7 @@ body {
 }
 
 .section {
+    text-align: center;
     padding: 0.5rem 2rem 1rem 2rem;
 }
 
@@ -32,9 +38,25 @@ body {
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
 }
 
+.underline {
+    width: 35rem;
+    height: 0.22rem;
+    background: black;
+    margin: 1rem auto;
+    border-radius: 1rem;
+}
+
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 48px;
+}
+
+h2 {
+    text-decoration: underline;
+}
+
+h3 {
+    margin-top: 2rem;
 }
 
 button,
