--- a/weeks/week_09/lab_09/templates/index.html
+++ b/weeks/week_09/lab_09/templates/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-        <link href="/static/styles.css" rel="stylesheet">
-        <title>Birthdays</title>
-    </head>
-    <body>
-        <div class="jumbotron">
-            <h1>Birthdays</h1>
-        </div>
-        <div class="container">
-            <div class="section">
+	<head>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+			rel="stylesheet"
+		/>
+		<link href="/static/styles.css" rel="stylesheet" />
+		<title>Birthdays</title>
+	</head>
+	<body>
+		<div class="jumbotron">
+			<h1>Birthdays</h1>
+		</div>
+		<div class="container">
+			<div class="section">
+				<h2>Add a Birthday</h2>
+				<form action="/" method="post">
+					<input type="text" name="name" placeholder="Name" />
+					<input type="number" name="month" placeholder="Month" />
+					<input type="number" name="day" placeholder="Day" />
+					<input type="submit" value="Add birthday" />
+				</form>
+			</div>
 
-                <h2>Add a Birthday</h2>
-                <!-- TODO: Create a form for users to submit a name, a month, and a day -->
-                <form action="/" method="post">
-                    <input type="text" name="name" placeholder="Name" >
-                    <input type="number" name="month"  placeholder="Month" >
-                    <input type="number" name="day"  placeholder="Day" >
-                    <input type="submit" value="Add birthday">
-                </form>
-            </div>
-
-            <div class="section">
-
-                <h2>All Birthdays</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Birthday</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- TODO: Loop through the database entries to display them in this table -->
-                        {% for person in people %}
-                            <tr>
-                                <th>{{person.name}}</th>
-                                <th>{{person.month}}/{{person.day}}</th>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </body>
+			<div class="section">
+				<h2>All Birthdays</h2>
+				<table>
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Birthday</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for person in people %}
+						<tr>
+							<th>{{person.name}}</th>
+							<th>{{person.month}}/{{person.day}}</th>
+						</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</body>
 </html>
