--- a/weeks/week_09/lab_09/static/styles.css
+++ b/weeks/week_09/lab_09/static/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: #fff;
     color: #212529;
+    font-family: 'Inter';
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -38,31 +39,49 @@ body {
 }
 
 h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
     font-size: 48px;
 }
 
-button, input[type="submit"] {
-    background-color: #d9edff;
-    border: 1px solid transparent;
+button,
+input {
     border-radius: 0.25rem;
     font-size: 0.95rem;
-    font-weight: 400;
     line-height: 1.5;
     padding: 0.375rem 0.75rem;
-    text-align: center;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     vertical-align: middle;
+    cursor: pointer;
 }
 
-input[type="text"], input[type="number"] {
-    line-height: 1.8;
-    width: 25%;
+.add-btn {
+    background-color: #d9edff;
 }
 
-input[type="text"]:hover, input[type="number"]:hover {
+input[type="submit"] {
+    border: 1px solid transparent;
+    text-align: center;
+}
+
+input[type="text"],
+input[type="number"] {
+    border: none;
+    border: solid 1px #d9edff;
+    width: 10%;
+}
+
+input[type="text"] {
+    width: 20%;
+}
+
+input[type="text"]:hover,
+input[type="number"]:hover {
     background-color: #f5f5f5;
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
+}
+
+.delete-btn {
+    background-color: #ffd9d9;
 }
 
 table {
@@ -81,3 +100,10 @@ tbody tr:nth-of-type(odd) {
     background-color: rgb(179, 208, 255, 0.3)
 }
 
+.birthday-col {
+    width: 75%;
+}
+
+.btn-col {
+    width: 25%;
+}
