--- a/weeks/week_09/lab_09/templates/index.html
+++ b/weeks/week_09/lab_09/templates/index.html
@@ -2,11 +2,18 @@
 
 <html lang="en">
 	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
 			rel="stylesheet"
 		/>
 		<link href="/static/styles.css" rel="stylesheet" />
+		<link
+			rel="shortcut icon"
+			href="./static/favicon.ico"
+			type="image/x-icon"
+		/>
 		<title>Birthdays</title>
 	</head>
 	<body>
@@ -16,11 +23,40 @@
 		<div class="container">
 			<div class="section">
 				<h2>Add a Birthday</h2>
-				<form action="/" method="post">
-					<input type="text" name="name" placeholder="Name" />
-					<input type="number" name="month" placeholder="Month" />
-					<input type="number" name="day" placeholder="Day" />
-					<input type="submit" value="Add birthday" />
+				<form action="/new" method="post">
+					<input
+						aria-label="Name"
+						autocomplete="off"
+						id="name"
+						name="name"
+						placeholder="Name"
+						required
+						type="text"
+					/>
+					<input
+						aria-label="Month"
+						min="1"
+						max="12"
+						name="month"
+						placeholder="Month"
+						required
+						type="number"
+					/>
+					<input
+						aria-label="Day"
+						min="1"
+						max="31"
+						name="day"
+						placeholder="Day"
+						required
+						type="number"
+					/>
+					<input
+						aria-label="Add birthday"
+						class="add-btn"
+						type="submit"
+						value="Add birthday"
+					/>
 				</form>
 			</div>
 
@@ -35,9 +71,23 @@
 					</thead>
 					<tbody>
 						{% for person in people %}
-						<tr>
+						<tr class="birthday-col">
 							<th>{{person.name}}</th>
 							<th>{{person.month}}/{{person.day}}</th>
+							<th class="btn-col">
+								<form action="delete" method="post">
+									<input
+										name="id"
+										type="hidden"
+										value="{{person.id}}"
+									/>
+									<input
+										class="delete-btn"
+										type="submit"
+										value="Delete"
+									/>
+								</form>
+							</th>
 						</tr>
 						{% endfor %}
 					</tbody>
