Fix pad, margin, add round corners, minor styling

--- a/weeks/week_09/p_set_09/templates/login.html
+++ b/weeks/week_09/p_set_09/templates/login.html
@@ -6,12 +6,13 @@ Log In
 
 {% block main %}
 <form action="/login" method="post">
-    <div class="form-group">
-        <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+    <div class="form-group mt-4 mb-2">
+        <input autocomplete="off" autofocus class="form-control rounded" name="username" placeholder="Username"
+            type="text">
     </div>
-    <div class="form-group">
-        <input class="form-control" name="password" placeholder="Password" type="password">
+    <div class="form-group mb-4">
+        <input class="form-control rounded" name="password" placeholder="Password" type="password">
     </div>
-    <button class="btn btn-primary" type="submit">Log In</button>
+    <button class="btn btn-primary rounded" type="submit">Log In</button>
 </form>
 {% endblock %}
