--- a/weeks/week_09/p_set_09/templates/register.html
+++ b/weeks/week_09/p_set_09/templates/register.html
@@ -7,13 +7,13 @@ Register
 {% block main %}
 
 <form action="/register" method="post">
-    <div class="form-group">
+    <div class="form-group mt-4 mb-2">
         <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
     </div>
-    <div class="form-group">
+    <div class="form-group mb-2">
         <input class="form-control" name="password" placeholder="Password" type="password">
     </div>
-    <div class="form-group">
+    <div class="form-group mb-4">
         <input class="form-control" name="confirmation" placeholder="Confirm password" type="password">
     </div>
     <button class="btn btn-primary" type="submit">Register</button>
