--- a/weeks/week_09/p_set_09/static/styles.css
+++ b/weeks/week_09/p_set_09/static/styles.css
@@ -2,46 +2,33 @@ body {
 	font-family: "Roboto" !important;
 }
 
-/* Colors for brand */
-nav .navbar-brand .blue
-{
-    color: #537fbe;
-}
-nav .navbar-brand .red
-{
-    color: #ea433b;
-}
-nav .navbar-brand .yellow
-{
-    color: #f5b82e;
-}
-nav .navbar-brand .green
-{
-    color: #2e944b;
+nav .navbar-brand {
+	font-size: xx-large;
+	color: var(--bs-primary);
 }
 
-main .form-control
-{
-    /* Center form controls */
-    display: inline-block;
-
-    /* Override Bootstrap's 100% width for form controls */
-    width: auto;
+main .form-control {
+	display: inline-block;
+	/* Override Bootstrap's 100% width for form controls */
+	width: auto;
 }
 
-main
-{
-    /* Scroll horizontally as needed */
-    overflow-x: auto;
-
-    /* Center contents */
-    text-align: center;
+main {
+	overflow-x: auto;
+	text-align: center;
 }
 
-main img
-{
-    /* Constrain images on small screens */
-    max-width: 100%;
+main img {
+	max-width: 100%;
+}
+
+.capital {
+	background-color: var(--bs-primary);
+	color: white;
+}
+
+table {
+	overflow: hidden !important;
 }
 
 td {
