--- a/weeks/week_09/p_set_09/templates/buy.html
+++ b/weeks/week_09/p_set_09/templates/buy.html
@@ -12,15 +12,15 @@ Buy
 {% endif %}
 
 <form action="/buy" method="post">
-    <div class="form-group">
-        <input autocomplete="off" autofocus class="form-control" name="symbol" placeholder="Symbol" type="text">
+    <div class="form-group mt-4 mb-2">
+        <input autocomplete="off" autofocus class="form-control rounded" name="symbol" placeholder="Symbol" type="text">
     </div>
-    <div class="form-group">
-        <input autocomplete="off" autofocus class="form-control" min="0" name="shares" placeholder="Shares"
+    <div class="form-group mb-4">
+        <input autocomplete="off" autofocus class="form-control rounded" min="0" name="shares" placeholder="Shares"
             type="number">
     </div>
 
-    <button class="btn btn-primary" type="submit">Buy</button>
+    <button class="btn btn-primary rounded" type="submit">Buy</button>
 </form>
 
 {% endblock %}
