--- a/weeks/week_09/p_set_09/templates/index.html
+++ b/weeks/week_09/p_set_09/templates/index.html
@@ -6,14 +6,25 @@ Home
 
 {% block main %}
 <h1 class="mb-5">Your Stock Portfolio</h1>
-<div class="row">
-    <div class="container col-lg-4">
-        <h1>{{capital}}</h1>
+<div class="row px-3">
+    <div class="capital container col-lg-4 my-3 py-3 rounded">
+        <div>
+            <span class="display-4">{{capital.cash|usd}}</span>
+            <p>Balance</p>
+        </div>
+        <div>
+            <span class="display-4">{{capital.portfolio_value|usd}}</span>
+            <p>Portfolio Value</p>
+        </div>
+        <div>
+            <span class="display-4">{{capital.grand_total|usd}}</span>
+            <p>Grand Total</p>
+        </div>
     </div>
 
-    <div class="container col-lg-8">
-        <table class="table">
-            <thead>
+    <div class="container col-lg-8 my-3">
+        <table class="rounded table table-responsive table-striped table-hover align-middle">
+            <thead class="table-primary align-middle">
                 <tr>
                     <th scope="col">Company</th>
                     <th scope="col">Symbol</th>
@@ -24,16 +35,16 @@ Home
                     <th scope="col">Growth</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="table-group-divider">
                 {% for stock in stocks_owned %}
                 <tr>
                     <td>{{stock["company"]}}</td>
-                    <td>{{stock["symbol"]|upper}}</td>
+                    <td>{{stock["symbol"] | upper}}</td>
                     <td>{{stock["shares"]}}</td>
-                    <td>${{stock["current_price"]|round(2)}}</td>
-                    <td>${{stock["exposure"]|round(2)}}</td>
-                    <td>${{stock["holding_value"]|round(2)}}</td>
-                    <td>${{stock["holding_growth"]|round(2)}} or {{stock["holding_growth_percent"]|round(2)}}%</td>
+                    <td>${{stock["current_price"] | round(2)}}</td>
+                    <td>${{stock["exposure"] | round(2)}}</td>
+                    <td>${{stock["holding_value"] | round(2)}}</td>
+                    <td>${{stock["holding_growth"] | round(2)}} or {{stock["holding_growth_percent"] | round(2)}}%</td>
                 </tr>
                 {% endfor %}
             </tbody>
