--- a/weeks/week_09/p_set_09/templates/quote.html
+++ b/weeks/week_09/p_set_09/templates/quote.html
@@ -7,10 +7,10 @@ Quote
 {% block main %}
 
 <form action="/quote" method="post">
-    <div class="form-group">
-        <input autocomplete="off" autofocus class="form-control" name="symbol" placeholder="Symbol" type="text">
+    <div class="form-group my-4">
+        <input autocomplete="off" autofocus class="form-control rounded" name="symbol" placeholder="Symbol" type="text">
     </div>
-    <button class="btn btn-primary" type="submit">Quote</button>
+    <button class="btn btn-primary rounded" type="submit">Quote</button>
 </form>
 
 {% endblock %}
