--- a/weeks/week_09/p_set_09/templates/layout.html
+++ b/weeks/week_09/p_set_09/templates/layout.html
@@ -13,6 +13,11 @@
     <link href="/static/styles.css" rel="stylesheet">
     <link href="/static/bootstrap.min.css" rel="stylesheet">
 
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
+    <script defer src="./static/script.js" type="text/javascript"></script>
+
     <title>C$50 Finance: {% block title %}{% endblock %}</title>
 
 </head>
