--- a/weeks/week_09/p_set_09/templates/layout.html
+++ b/weeks/week_09/p_set_09/templates/layout.html
@@ -51,13 +51,16 @@
         </div>
     </nav>
 
-    {% if get_flashed_messages() %}
-    <header>
-        <div class="alert alert-primary border text-center" role="alert">
-            {{ get_flashed_messages() | join(" ") }}
-        </div>
-    </header>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }} alert-dismissible fade show text-center" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" </button>
+    </div>
+    {% endfor %}
     {% endif %}
+    {%endwith%}
 
     <main class="container p-5">
         {% block main %}{% endblock %}
